Added documentation for variants

--- a/website/pages/component-substitution.mdx
+++ b/website/pages/component-substitution.mdx
@@ -35,7 +35,7 @@ another.
 <Example
   Component={ComponentSwap}
   code={ComponentSwapSrc}
-  caption="OnStage.jsx"
+  caption="Render Component"
   expand
 />
 
@@ -62,7 +62,7 @@ with all the other properties remaining the same.
 <Example
   Component={ComponentSwap2}
   code={ComponentSwap2Src}
-  caption="OnStage.jsx"
+  caption="Substitute Component"
   expand
 />
 
@@ -73,7 +73,7 @@ You can also provide a set of default properties as the second element.
 <Example
   Component={ComponentSwap3}
   code={ComponentSwap3Src}
-  caption="OnStage.jsx"
+  caption="Substitute With Defaults"
   expand
 />
 
@@ -84,6 +84,6 @@ Or the second element can be a theming function.
 <Example
   Component={ComponentSwap4}
   code={ComponentSwap4Src}
-  caption="OnStage.jsx"
+  caption="Substitute With Function"
   expand
 />
