--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -27,9 +27,9 @@ import { Link, Hero, PeopleWhoShare } from '@abw/badger-website'
   eleven. Eleven. Exactly. One louder.
 </blockquote>
 
-<div class="width-8rem block-center text-center mar-t-16">
+<div className="width-8rem block-center text-center mar-t-16">
   <Badger/>
-  <div class="mar-t-2 smaller">
+  <div className="mar-t-2 smaller">
     Built by Badgers
   </div>
 </div>
