--- a/website/pages/theming-components.mdx
+++ b/website/pages/theming-components.mdx
@@ -23,7 +23,8 @@ defaults to 10.
 <Example
   Component={DefaultAmp}
   code={DefaultAmpSrc}
-  caption="OnStage.jsx"
+  caption="Default Volume"
+  undent={2}
   expand
 />
 
@@ -33,7 +34,8 @@ value.
 <Example
   Component={AmpWithVolume}
   code={AmpWithVolumeSrc}
-  caption="OnStage.jsx"
+  caption="Explicit Volume"
+  undent={2}
   expand
 />
 
@@ -61,7 +63,8 @@ You can still use it just like you did before.
 <Example
   Component={DefaultThemedAmp}
   code={DefaultThemedAmpSrc}
-  caption="OnStage.jsx"
+  caption="Default or Explicit Volume"
+  undent={4}
   expand
 />
 
