--- a/website/pages/quick-start.mdx
+++ b/website/pages/quick-start.mdx
@@ -56,6 +56,7 @@ In this example, the default `volume` for the `Amplifier` component is 10.
 
 <Snippet
   file="ThemedAmplifier.jsx"
+  highlightLines="7"
   expand
 />
 
