--- a/website/pages/variants.mdx
+++ b/website/pages/variants.mdx
@@ -30,7 +30,7 @@ then we set the `volume` property to `11`, the `name` to `Nigel` and the
 
 As usual, these only provide default values for the component.  You can still
 override them by specifying explicit property values.  So if Derek is
-performing a blistering bass solo in free-form jazz exploration in front of
+performing a blistering bass solo in a free-form jazz exploration in front of
 a festival crowd then he can still crank his amp up to 11, as shown on line
 32.
 
